# psychology_club

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
app/: __init__.py  avatars.py  cookie_texts.py  extensions.py  mailersend_mail_util.py  mailing_import.py  mailing_jobs.py  mailing_send.py  models.py  newsletter.py  newsletter_routes.py  security_forms.py
app/admin/: __init__.py  routes.py
app/dash_app/: __init__.py  layout.py  src.py
app/dash_app/assets/: article_table.css  logo_runner.js  (+4 more)
app/templates/: base.html
app/views/: roles.py
k8s/: deployment.yaml  ingress.yaml  postgres.yaml  service.yaml
migrations/versions/: 13a4c6e9b2d1_add_form_close_date_to_article.py  1c3d4e5f6a7b_add_project_active_flag.py  2f8c0d1a2b3c_add_projects_table.py  3e607cbd94de_longer_abstract.py  4d5e6f7a8b9c_add_project_custom_page.py  4f2c1d7b9a3e_add_mailing_recipient_cache_key.py  5b7fdc6e1c9a_add_mailing_template_data.py  6b93f9d8f0c1_add_download_files_table.py  7a8b6f2c1d4e_add_mailing_template_types.py  8621f864c085_article_short.py  8bbf94bc23b2_merge_heads.py  8f6f0f3f6a21_add_google_form_url_to_article.py  90946aa25126_add_username_and_phone.py  91741d43094d_add_flask_security_models.py  9c1e7d2a4b6f_add_mailing_subjects.py  a7b8c9d0e1f2_add_newsletter_subscribers.py  b3f1021b3c67_add_registration_consents.py  b8c9d0e1f2a3_add_mailing_recipient_source.py  c91dc8d947ad_add_image_consent.py  d2a6a1a9d4c2_add_mailing_batches.py  f1b2c3d4e5f6_add_mailing_bulk_table.py  f82a393eb353_fix_image_article_relationship.py
(+50 files in other folders)
